jk-guards-baseline.toml: engine-owned ratchet with line-independent fingerprints
Per rule: the population it examined and the tolerated entries (a site fingerprint or a metric unit
with its value), each with the reason a human gave. Reconciliation classifies observations as fresh
(red), baselined, or stale (dropped on tightening); a metric that fell lowers its own line; a run
examining under 80% of the recorded population is scope-shrunk and never tightens. Deterministic
writer, so a no-change run is a byte-identical file; under CI nothing is written and a loose
baseline is red; freeze needs a reason.